[package]
name = "dll_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libloading = "0.8.1"
log = { version = "0.4.20", features = ["std"] }
chrono = "0.4.31"
tokio = { version = "1.35.1", features = ["full"] }

[profile.release]
debug = true
